source/_assets/scss/pages/index.scss
/* ... */
@media (prefers-color-scheme: dark) {
	:root {
		--blocks-color: #D6D7D8;
	}
}

html { scroll-behavior: initial; }
html:focus-within {scroll-behavior: unset;}

body {
	color: #454545;
	font-family: "Maru Var", sans-serif;
}

body > * {
	background: var(--background-color-main);
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Over-scrolls
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
div.overscroll {
	height: 300px;
	width: 100%;
	position: fixed;
	z-index: -2;
}
div.overscroll.top {
	top: 0;
	transform: translateY(-299px);
	background-image: linear-gradient(to bottom, hsl(211, 76%, 54%), hsl(265, 80%, 88%));
}
div.overscroll.bottom {
	bottom: 0;
	transform: translateY(299px);
	background-image: linear-gradient(to bottom, hsl(252, 100%, 38%), hsl(230, 76%, 53%) 50%);
}
div.overscroll.mobile {
	height: 200px;
	z-index: -3;
	transform: none;
}
/* Over-scrolls [End] */


/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Nav Story Ticker
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
nav.header-background::before {
	content: "";
	position: absolute;
	height: inherit;
	width: 100%;
	left: 0;
	background-image: linear-gradient(to bottom, rgba(221, 201, 249, 1.0), rgba(237, 240, 240, 0) 60%);
}
nav.header-background-animation::before {
	content: "";
	position: absolute;
	height: 50px;
	width: 100%;
	left: 0;
	background-image: linear-gradient(to bottom, rgba(221, 201, 249, 1.0), rgba(237, 240, 240, 0) 60%);
	animation-name: header-background;
	animation-duration: 1s;
}
nav {
	height: 3.125rem;
	display: flex;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: space-between;
	
	--background-gradient: linear-gradient(to bottom, 
		hsla(265, 80%, 88%, 1), 
		hsla(180, 9%, 94%, 0) 60%
	);
	--button-gradient: linear-gradient(to bottom, 
		hsla(265, 80%, 88%, 1), 
		hsla(180, 9%, 94%, 0.7) 60%);

	
	div.background {
		position: absolute;
		height: 100%;
		width: 100%;
		left: 0;
		background: var(--background-gradient);
		opacity: 0;
		transition: opacity 1s;
	}
	div.background.show {
		opacity: 1;
	}
	
	> a {
		position: absolute;
		top: 0;
		height: 100%;
		width: 2.57rem;
		z-index: 2;
		background: var(--button-gradient);
		padding: 0.625rem;
		display: flex;
		align-items: center;
		backdrop-filter: blur(3px);
		-webkit-backdrop-filter: blur(3px);
	}
	> a.home {
		left: 0;
		border-radius: 0 50% 50% 0;
	}
	> a.more {
		right: 0;
		border-radius: 50% 0 0 50%;
	}
	img {
		height: 1.3125rem;
		width: 1.3125rem;
	}
	ul {
		width: 100%;
		height: 100%;
		z-index: 0;
		display: flex;
		flex-direction: row;
		align-items: center;
		gap: 0.75rem;
		padding: 0 2.56rem;
		list-style-type: none;
		overflow: scroll;
		-ms-overflow-style: none; /* Edge hide scrollbar */
		scrollbar-width: none; /* FF hide scrollbar */
		div {
			display: flex;
			flex-direction: row;
			align-items: center;
			gap: 0.75rem;
			height: 100%;
		}
		a {
			white-space: nowrap;
			text-decoration: none;
			height: calc(100% - 0.9375rem);
			transition: transform 500ms;
		}
		a:hover {
			transform: scale(1.01);
			filter: brightness(1.1);
		}
		li {
			height: 100%;
			display: flex;
			align-items: center;
			
			padding: 0 1.01rem;
			flex-shrink: 0;
			font-style: normal;
			font-size: 1.3rem;
			font-weight: 500;
			color: white;
			background-color: #6f7a8c;
			border-radius: 5rem;
			
			span.subtitle {
				opacity: .85;
				font-style: italic;
				font-size: 1.15rem;
			}
		}
		li.splash-mini {
			background: linear-gradient(
				hsl(275, 100%, 50%), 
				hsl(262, 100%, 50%)
			);
			color: rgba(207, 229, 255, 1);
			font-family: 'Unbounded Var';
			font-weight: 550;
			span {
				font-family: 'Maru Var';
				font-size: 0.9em;
				color: hsla(0, 0%, 100%, 0.91);
				font-style: italic;
			}
		}
	}
	ul::-webkit-scrollbar {
		display: none; /* Safari, Chrome hide scrollbar */
	}
	li.home {
		background: none;
		padding: 0;
		display: none;
	}
}
@media (max-width: 46rem) {
	nav {
		> a.more,
		> a.home {
			display: none;
		}
		ul {
			padding: 0 0.625rem;
			li.home {
				display: block;
			}
			
		}
	}
}
/* Nav Story Ticker [End] */

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Timeline Graph (Blocks)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
div.graph {
	display: flex;
	flex-direction: row-reverse;
	background: #EDF0F0;
	
	overflow-y: hidden;
	overflow-x: scroll;
	-ms-overflow-style: none; /* Edge hide scrollbar */
	scrollbar-width: none; /* FF hide scrollbar */
}
div.graph::-webkit-scrollbar {
	display: none; /* Safari, Chrome hide scrollbar */
}
div.graph div.flex {
	padding: 10px;
	display: flex;
	justify-content: flex-start;
	flex-direction: row-reverse;
	gap: 5px;
}
div.graph div {
	display: flex;
	flex-direction: column-reverse;
	gap: 5px;
}
div.graph p.label {
	display: block;
	min-height: 32px;
	width: 32px;
	margin-top: -5px;
	vertical-align: top;
	white-space: nowrap;
	overflow-y: visible;
}
div.graph a {
	display: block;
	width: 32px;
	height: 32px;
	background-color: #D6D7D8;
	border-radius: 2px;
	transition: filter 900ms;
}
div.graph a.future {
	background: rgba(231, 231, 231, 1);
}
div.graph a.low {
	background: #87D894;
}
div.graph a.med {
	background: #12B02B;
}
div.graph a.high {
	background: #1576FF;
}
div.graph a.special img {
	width: 28px;
	height: 28px;
	object-fit: contain;
	margin-left: 2px;
	margin-top: 2px;
}

div.graph a:hover {
	filter: brightness(0.9);
	transition: filter 0ms;
}
@media not all and (hover: hover) {
	div.graph-hover {
		display: none;
	}
	div.graph a:hover {
		filter: none;
	}
}

div.graph div.more {
	height: calc( 100% - 32px );
	width: 200px;
	margin-right: 10px;
	background: rgba(219, 219, 219, 0.3);
	border-radius: 10px;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 20px;
	gap: 14px;
}
div.graph div.more a {
	width: fit-content;
	white-space: nowrap;
	background: rgba(219, 219, 219, 0.6);
	font-weight: 550;
	text-align: center;
	padding: 4px 20px;
	border-radius: 10px;
	font-size: 1em;
}
/* ... */

